@@ -122,6 +122,17 @@ IF (TARGETING_PLAYBOOK)
     SET(CMAKE_C_FLAGS "-mfpu=neon ${CMAKE_C_FLAGS}")
     SET(CMAKE_CXX_FLAGS "-mthumb -mthumb-interwork ${CMAKE_CXX_FLAGS}")
     SET(CMAKE_C_FLAGS "-mthumb -mthumb-interwork ${CMAKE_C_FLAGS}")
+    # check for BB_RELEASE_FLAGS or BB_DEBUG_FLAGS to set CMAKE_C_FLAGS{DEBUG|RELEASE} CMAKE_CXX_FLAGS{DEBUG|RELEASE}
+    if( DEFINED ENV{BB_RELEASE_FLAGS} )
+        set(CMAKE_CXX_FLAGS_RELEASE  "$ENV{BB_RELEASE_FLAGS} -DNDEBUG")
+        set(CMAKE_C_FLAGS_RELEASE  "$ENV{BB_RELEASE_FLAGS} -DNDEBUG")
+        message( "== ENV override RELEASE ${CMAKE_CXX_FLAGS_RELEASE}" )
+    endif()
+    if( DEFINED ENV{BB_DEBUG_FLAGS} )
+        set(CMAKE_CXX_FLAGS_DEBUG "$ENV{BB_DEBUG_FLAGS}")
+        set(CMAKE_C_FLAGS_DEBUG "$ENV{BB_DEBUG_FLAGS}")
+        message( "== ENV override DEBUG ${CMAKE_CXX_FLAGS_DEBUG}")
+    endif()
 ENDIF ()
 
 ADD_DEFINITIONS(-DRESOURCE_PATH="/usr/share/webkit/resources/")
